Bug 1493742 - When accepting a layout viewport update from the main thread, constrain its position to enclose the visual viewport. r=kats, a=RyanVM

APZ wants the *size* of the layout viewport from the main thread, but it
knows the position better.

Differential Revision: https://phabricator.services.mozilla.com/D9448

--HG--
extra : source : 1d3872dd20e192fba9c2e2f2dd4cff1e476e869a